--- a/plot.htm
+++ b/plot.htm
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
    <title>Demonstrator of online usage of JSROOT</title>
 
    <!--  load JSROOT with 2D graphic -->
-   <script src="JSRootCore.min.js?2d&onload=startGUI" type="text/javascript"></script>
+   <script src="../scripts/JSRootCore.min.js?2d&onload=startGUI" type="text/javascript"></script>
 
    <script type='text/javascript'>
 
