--- a/plot.htm
+++ b/plot.htm
@@ -1,80 +1,86 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
+
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
-   <meta charset="UTF-8" http-equiv="X-UA-Compatible" content="IE=Edge"/>
+   <meta charset="UTF-8">
 
-   <title>Demonstrator of online usage of JSROOT</title>
+   <title>Automatic zooming in second histogram</title>
 
-   <!--  load JSROOT with 2D graphic -->
-   <script src="../scripts/JSRootCore.min.js?2d&onload=startGUI" type="text/javascript"></script>
+   <!-- Example derived from https://jsfiddle.net/obj9vffj/4/ -->
 
-   <script type='text/javascript'>
-
-      var mdi = null, cnt = 0, drawopt = null, addr = null;
-
-      function updateGUI() {
-
-         // here set of generated json files are used
-         // One could specify addres of running THttpServer like http://localhost:8080/Canvases/c1/root.json.gz?compact=3
-         // Or one can create root.json file in the application and place it on the webserver 
-         // To run demo, one should generate rootXX.json files using demo.C macro
-
-         var request_addr = "root" + (cnt%20) + ".json";
-
-         // "dummy=xxxx" URL parameter can be used to prevent browser cashing
-         // request_addr+= "?dummy=" + cnt;
-
-         if (addr!=null) request_addr = addr; 
-
-         var req = JSROOT.NewHttpRequest(request_addr, 'object', function(histo) {
-            if (!histo) {
-               d3.select('#drawing').html("<h3>Can not get " + request_addr + " from the server</h3>"); 
-               return;
-            }
-
-            var frame = 'drawing';
-
-            // when use grid layout, use counter value stored in request itself 
-            if (mdi!=null) frame = mdi.FindFrame("item" + (this.cnt % mdi.NumGridFrames()), true);
-
-            // redraw histogram at specified frame
-            JSROOT.redraw(frame, histo, drawopt);
-          });
-
-          req.send(null);
- 
-          req.cnt = cnt++; // remember counter to find correct frame later
-      }
-
-      function startGUI() {
-         d3.select('html').style('height','100%');
-         d3.select('body').style({'min-height':'100%', 'margin':'0px', "overflow" :"hidden"});
-
-         var monitor = JSROOT.GetUrlOption("monitoring");
-         if ((monitor == "") || (monitor==null)) 
-            monitor = 1000;
-         else
-            monitor = parseInt(monitor);
-
-         drawopt = JSROOT.GetUrlOption("opt");
-
-         addr = JSROOT.GetUrlOption("addr");
-
-         var layout = JSROOT.GetUrlOption("layout");
-         if (layout!=null) mdi = new JSROOT.GridDisplay('drawing', layout);
-
-         setInterval(updateGUI, monitor);
-
-         // let adjust drawing when browser will be resized
-         JSROOT.RegisterForResize('drawing');
-      }
-   </script>
+   <!-- Load all required functionality in advance and call user function when ready -->
+   <script src="https://root.cern/js/latest/scripts/JSRoot.core.js" type="text/javascript"></script>
 
 </head>
 
 <body>
-   <div id="drawing" style="position:absolute; left:1px; top:1px; bottom:1px; right:1px"></div>
+  <div id="drawth2" style="width:600px; height:400px"></div>
+  <div id="data source">
+   <i>Data source : <a href="htts://www.nndc.bnl.gov/ensdf" target="_blank">Evaluated Nuclear Structure Data File</a>, last updated 2020-10-01 </i>
+   </div>
+  <div id="user_tooltip">Move cursor to display half-life value</div>
+  <script type='text/javascript'>
+   var halflives  = [];
+   var halflives_plus  = [];
+   var halflives_minus  = [];
+    function LoadData(){
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+          if (xhttp.readyState == 4 && xhttp.status == 200) {
+              var xmlDoc = xhttp.responseXML;
+              var xZ=xmlDoc.getElementsByTagName("Z");
+              var xN=xmlDoc.getElementsByTagName("N");
+              var xHalflife=xmlDoc.getElementsByTagName("Halflife");
+              var xHLplus=xmlDoc.getElementsByTagName("plus");
+              var xHLminus=xmlDoc.getElementsByTagName("minus");
+
+              for (i=0;i<xZ.length;i++){
+                   var zz = parseInt(xZ[i].childNodes[0].nodeValue);
+                   var nn = parseInt(xN[i].childNodes[0].nodeValue);
+                   za = zz*1000+(zz+nn);
+                   halflives[za] = parseFloat(xHalflife[i].childNodes[0].nodeValue);
+                   halflives_plus[za] = parseFloat(xHLplus[i].childNodes[0].nodeValue);
+                   halflives_minus[za] = parseFloat(xHLminus[i].childNodes[0].nodeValue);
+              }
+              //console.log(halflives_plus[49134]);
+          }
+      };
+
+      xhttp.open("GET", "https://ribf.riken.jp/~phong/mysite/_site/files/half_lives_ensdf21.xml", true);
+      xhttp.send();
+    }//Loaddata
+
+   function UserHandler(info) {
+      if (!info)  {
+         d3.select("#user_tooltip").html("No tooltip");
+         return false;
+      }
+      var ele = ["H", "He", "Li", "Be", "B", "C", "N", "O", "F", "Ne", "Na", "Mg", "Al", "Si", "P", "S", "Cl", "Ar", "K", "Ca", "Sc", "Ti", "V", "Cr", "Mn", "Fe", "Co", "Ni", "Cu", "Zn", "Ga", "Ge", "As",
+          "Se", "Br", "Kr", "Rb", "Sr", "Y", "Zr", "Nb", "Mo", "Tc", "Ru", "Rh", "Pd", "Ag", "Cd", "In", "Sn", "Sb", "Te", "I", "Xe", "Cs", "Ba", "La", "Ce", "Pr", "Nd", "Pm", "Sm", "Eu", "Gd", "Tb", "Dy",
+          "Ho", "Er", "Tm", "Yb", "Lu", "Hf", "Ta", "W", "Re", "Os", "Ir", "Pt", "Au", "Hg", "Tl", "Pb", "Bi", "Po", "At", "Rn", "Fr", "Ra", "Ac", "Th", "Pa", "U", "Np", "Pu", "Am", "Cm", "Bk", "Cf", "Es",
+          "Fm", "Md", "No", "Lr", "Rf", "Db", "Sg", "Bh", "Hs", "Mt", "Ds", "Rg", "Cn", "Nh", "Fl", "Mc", "Lv", "Ts", "Og"];
+      // set tooltip info
+      var A = info.binx+info.biny-2;
+      var Z = info.biny-1;
+      var element = ele[Z-1];
+      var ZA = Z*1000+A;
+      d3.select("#user_tooltip").html("Isotope: <sup>"+ A +"</sup>"+ element +" | T<sub>1/2</sub> = " + halflives[ZA].toFixed(4)+" s  + "+ halflives_plus[ZA].toFixed(6)+" / - "+ halflives_minus[ZA].toFixed(6) + " s");
+      return true; // means event is handled and can be ignored
+   }
+
+   LoadData();
+   JSROOT.openFile("https://ribf.riken.jp/~phong/onlinefiles/halflives.root").then(file => {
+      file.readObject("halflives;1")
+          .then(obj2 => JSROOT.draw("drawth2", obj2, "colz;logz;nostat").then(painter =>{
+            painter.configureUserTooltipHandler(1 ? UserHandler : null);
+          }));
+   });
+
+   </script>
+
 </body>
 
 </html>
