--- a/halflives.htm
+++ b/halflives.htm
@@ -16,7 +16,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Nuclear Half-lives Chart" />
 <script type="application/ld+json">
-{"url":"https://briken21.github.io/nuclear-halflives.html","@type":"WebPage","headline":"Nuclear Half-lives Chart","@context":"https://schema.org"}</script>
+{"url":"https://briken21.github.io/halflives.htm","@type":"WebPage","headline":"Nuclear Half-lives Chart","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <script src="https://root.cern/js/latest/scripts/JSRoot.core.js" type="text/javascript"></script>
 
