--- a/edm.htm
+++ b/edm.htm
@@ -247,8 +247,7 @@
 			};
 			if (loadoption == "hfb") {
 				xhttp.open("GET", "https://ribf.riken.jp/~phong/mysite/_site/files/Mennik.2014.xml", true);
-			} else if (
-        == "ktuy") {
+			} else if (loadoption == "ktuy") {
 				xhttp.open("GET", "https://ribf.riken.jp/~phong/mysite/_site/files/KTUY05.xml", true);
 			} else {
 				xhttp.open("GET", "https://ribf.riken.jp/~phong/mysite/_site/files/Moller.2003.xml", true);
