Update and rename frdm03 to frdm03.htm

--- a/frdm03.htm
+++ b/frdm03.htm
@@ -47,9 +47,10 @@
  		<!-- TOOLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL -->
 		</canvas>
 	</div>
-                   <li> HFB based EDM:
-                        <br> - K. Miernik Phys. Rev. C 90, 0543060 (2014)
-                        <br> - S. Goriely, N. Chamel, J.M. Pearson, Phys. Rev. C 88 024308 (2013) </li>
+                   <li> FRDM-QRPA:
+                        <br> - Möller, Peter, Bernd Pfeiffer, and Karl-Ludwig Kratz. "New calculations of gross β-decay properties for astrophysical applications: Speeding-up the classical r process.\
+" Physical Review C 67.5 (2003): 055802.
+                        <br> - P. Moller, A. J. Sierk, T. Ichikawa, H. Sagawa. "Nuclear ground-state masses and deformations: FRDM(2012)" arXiv:1508.06294 </li>
     
     </div>
  
